changes to the objective section

--- a/Latex/ReportAG.tex
+++ b/Latex/ReportAG.tex
@@ -81,7 +81,7 @@
 \clearpage
 \setcounter{page}{1}
 
-\section{Abstract}
+\section*{Abstract}
 
 In this project we explore the application of inverse kinematics to the control of a linkage in three-dimensional space. First, we construct a simple composite object which contains a chain of rigid rods of user-selectable lengths, that are connected by joints so as to allow full flexibility of movement. In the current implementation, the joints connecting the rigid rods can be restricted to either rotate purely in a particular two-dimensional plane in three-dimensional space, acting like simple hinges, or enabled to move freely in three-dimensional space, resulting in more complicated motions. The joints have the ability to be constrained to only move within user-defined limits, and the flexibility and rotation speed of the joints can be varied. Second, the method of inverse kinematics is explored in order to determine the appropriate configurations of the linkage at each time-step, i.e. the required angles of the joints when the linkage is given the task of reaching a user-specified target point. The method works by planning the motion towards a goal, which is defined by point in three-dimensional space, subject to constraints that ensure the target point is in a reachable region of the linkage; dependent on the overall length of the linkage and the maximum and minimum angles of the joints. Several commonly employed inverse kinematics techniques are discussed and evaluated, including nonlinear optimisation methods, but in the final implementation we utilise the Jacobian transpose method due to it's relatively simple implementation and fast computational speed, making it an attractive method for real-time and interactive applications such as this. Finally, the movement of the object is animated, and a number of both physical and non-physical parameters can be adjusted to deliver a visually appealing performance, for example by enforcing a slow-in and slow-out motion.
 
@@ -97,11 +97,11 @@ Kinematics refers to the methodological study of movement, encompassing all the 
 
 Whilst the subject of inverse kinematics is applicable to many diverse areas, including astrophysics and robotics, this project is primarily concerned with its application to the fields of animation and computer graphics. Why is IK interesting? Why is it hard?\\
 
-This report begins with a brief account of the main objectives of the project and then proceeds to discuss important previous related work, including an overview of some of the most commonly used methods of approaching the inverse kinematics problem. Following this, the procedure of our investigation is explained, describing the different methods that were explored. Moreover, some of the issues that were encountered are discussed, including problems concerning both the computational and the implementation aspects, and how these problems were addressed. We then go on to discuss the simulation implementation of the proposed linkage system in Matlab, and the computational methods that were explored for solving the inverse kinematics problem. Carrying out an initial simulation in Matlab enabled us to be able to set up the equations quickly, test out different methods, and discover what worked and what didn't in a simplified two-dimensional system before porting the code to the final fully three-dimensional environment in OpenGL. We then continue by explaining in detail the operations and execution in OpenGL. The last section of this report includes a review of the performance and the limitations of the method, as well as a discussion of possible further improvements.
+This report begins with a brief account of the main objectives of the project and then proceeds to discuss important previous related work, including an overview of some of the most commonly used methods of approaching the inverse kinematics problem. Following this, the procedure of our investigation is explained, describing the different methods that were explored. Moreover, some of the issues that were encountered are discussed, including problems concerning both the computational and the implementation aspects, and how these problems were addressed. We then go on to discuss the simulation implementation of the proposed linkage system in Matlab, and the computational methods that were explored for solving the inverse kinematics problem. Carrying out an initial simulation in Matlab enabled us to be able to set up the equations quickly, test out different methods, and discover what worked and what didn't in a simplified two-dimensional system before porting the code to the final, fully three-dimensional environment in OpenGL. We then continue by explaining in detail the operations and execution in OpenGL. The last section of this report includes a review of the performance and the limitations of the system, as well as a discussion of possible further improvements.
 
 \subsection{Objectives}
 
-The main objectives of this investigation into the problem of inverse kinematics were:
+The main objective of this investigation was to explore the problem of inverse kinematics using a linkage in three-dimensional space. The final system was to be built in OpenGL and allow for a reasonable degree of user interaction. The three-dimensional linkage model did not need to exhibit a high level of realism, so long as the three-dimensional nature of the linkage was revealed; with simplistic lighting and rendering. The main properties of the inverse kinematic system to be explored were:
 
 \begin{enumerate}
 \item
