added to related work section

--- a/Latex/ReportAG.bib
+++ b/Latex/ReportAG.bib
@@ -25,3 +25,30 @@ title = {Introduction to Robotics: Mechanics and Control},
 publisher = {Addison-Wesley},
 year = {1955}
 }
+
+@article{Madd04,
+author = {Meredith, M. and S.C.Maddock},
+title = {Real-Time Inverse Kinematics: The Return of the Jacobian},
+publisher = {University of Sheffield},
+journaltitle = {Department of Computer Science Research Memorandum CS-04-06},
+year = {2004}
+}
+
+@thesis{Chin96,
+	author		= "K.W. Chin",
+	title		= "Closed-form and generalized
+inverse kinematic solutions for animating the human
+articulated structure",
+	school		= "Curtin University of Technology",
+	year		= "1996",
+}
+
+@article{Kwan00,
+author = {C. Kwang-Jin, K. Hyeong-Seok},
+title = {On-line Motion Retargetting},
+journaltitle = {The Journal of Visualization and
+Computer Animation},
+vol = {11},
+pages = {223-235},
+year = {2000}
+}
