--- a/Latex/ReportAG.tex
+++ b/Latex/ReportAG.tex
@@ -101,7 +101,7 @@ This report begins with a brief account of the main objectives of the project an
 
 \subsection{Objectives}
 
-The main objective of this investigation was to explore the problem of inverse kinematics using a linkage in three-dimensional space. The final system was to be built in OpenGL and allow for a reasonable degree of user interaction. The three-dimensional linkage model did not need to exhibit a high level of realism, so long as the three-dimensional nature of the linkage was revealed; with simplistic lighting and rendering. The main properties of the inverse kinematic system to be explored were:
+The main objective of this investigation was to explore the problem of inverse kinematics using a linkage in three-dimensional space. The final system was to be built in OpenGL and allow for a reasonable degree of user interaction. The linkage model did not need to exhibit a high level of realism, so long as the three-dimensional nature of the linkage was revealed, using simplistic lighting and rendering. The main properties of the inverse kinematic system to be explored were:
 
 \begin{enumerate}
 \item
@@ -111,15 +111,15 @@ To implement a user-interactive way of choosing the target position for the end-
 A way to change the physical properties of the linkage, such as the rate at which the joints can move, any specified constraints on the joints, and the slow-in and slow-out movement of the linkage as it leaves it's current position and approaches the target position respectively.
 
 \item
-To investigate whether to model the and thereby vary the flexibility of the rods.
+To investigate whether to model and thereby vary the flexibility of the rods.
 \end{enumerate} 
 
 %------------------------------------------------
 
 \section{Related Work}
-The subject of inverse kinematics has been much researched over the past 60 years. Initially, it was primarily used in the robotics industry, for example for the control of robotic arms, particularly in car manufacturing, and the problem was first formulated in mechanical engineering literature \cite{Crai55}. But it has since been adopted by the computer graphics community as a means for animating a character's pose and movement through the control of an underlying moveable skeleton. An animator will often adjoin a three-dimensional deformable model of a character to an articulated skeleton structure, with defined bones and joints with certain physical constraints, which can be moved interactively into the desired positions. This process is known as 'rigging' in animation. The issue that inverse kinematics attempts to solve is to find the set of joint configurations that produce a plausible skeleton or linkage configuration based upon a desired end-effector position. For example, in character animation, the end-effector may be the position of a hand or foot, and we want to know the required joint angles of the arm or leg which allow the end-effector to be in this position, whilst remaining physically plausible. \\
+The subject of inverse kinematics has been much researched over the past 60 years. Initially, it was primarily used in the robotics industry, for example for the control of robotic arms, particularly in car manufacturing, and the problem was first formulated in mechanical engineering literature \cite{Crai55}. But it has since been adopted by the computer graphics community as a means for animating a character's pose and movement through the control of an underlying moveable skeleton. An animator will often adjoin a three-dimensional deformable model of a character to an articulated skeleton structure, with defined bones and joints with certain physical constraints, which can be moved interactively into the desired positions. This process is known as 'rigging' in animation. The issue that inverse kinematics attempts to solve is to find the set of joint configurations that produce a plausible skeleton or linkage configuration based upon a desired end-effector position. For example, in character animation, the end-effector may be the position of a hand or foot, and we want to know the required joint angles of the arm or leg which allow the end-effector to be in this position, whilst remaining physically plausible for the character. \\
 
-There are a number of well-established methods of approaching the inverse kinematics problem which can be divided into four main categories of solver: geometrical/analytical algorithms, cyclic coordinate descent (CCD), differential algorithms, and hybrid methods which combine together various aspects of the first three techniques. Geometrical/analytical algorithms, such as by ... tend to be very quick because the inverse kinematics problem is essentially reduced to a single mathematical equation that only needs to be evaluated in a single step to produce a result. However, such methods have limitations, particularly for linkages with a large number of links, and so in these situations it is impractical to reduce the problem to a single-step mathematical equation. This means that in the field of character animation, geometrical/analytical techniques are less useful, but for this project where we are dealing with only a few links and a single end-effector, this is perhaps an appropriate method. \\
+There are a number of well-established methods of approaching the inverse kinematics problem which can be divided into four main categories of solver: geometrical/analytical algorithms, cyclic coordinate descent (CCD), differential algorithms, and hybrid methods which combine together various aspects of the first three techniques \cite{Madd04}. Geometrical and analytical algorithms, such as by \cite{Kwan00}, \cite{Chin96} tend to be very quick because the inverse kinematics problem is essentially reduced to a single mathematical equation that only needs to be evaluated in a single step to produce a result. However, such methods have limitations, particularly for linkages with a large number of links, and so in these situations it is impractical to reduce the problem to a single-step mathematical equation. This means that in the field of character animation, geometrical/analytical techniques are less useful, but for a project such as this, where we are dealing with only a few links and a single end-effector, this could perhaps be an appropriate method. \\
 
 Another approach is cyclic coordinate descent (CCD), which uses a greedy algorithm to solve for each joint in turn, and repeats this process until a satisfactory solution is found. Solvers based on this method include those by ... Although this method is relatively simple and fast, it suffers from inaccuracies. Another issue with this technique is that the joint angles are updated one at a time, which has the undesirable and unrealistic result of earlier joints moving much more than later links in the linkage. \\
 
