more references added

--- a/Latex/ReportAG.bib
+++ b/Latex/ReportAG.bib
@@ -52,3 +52,49 @@ vol = {11},
 pages = {223-235},
 year = {2000}
 }
+
+@article{Paul88,
+author = {R. P. Paul, B. Shimano, G. E. Mayer},
+title = {Kinematic Control Equations for Simple Manipulators},
+journaltitle = {IEEE Transactions on System, Man \& Cybernetics},
+vol = {11, No. 6},
+year = {1988}
+}
+
+@article{Eber01,
+author = {D. H. Eberly},
+title = {3D Game Engine Design},
+publisher = {Morgan Kaufmann},
+year = {2001}
+}
+
+@article{Wang91,
+author = {L. Wang, C. Chen},
+title = {A Combined Optimisation
+Method for Solving the Inverse Kinematics Problem of
+Mechanical Manipulators},
+journaltitle = {IEEE Transactions on
+Robotics \& Applications},
+vol = {7, No. 4},
+pages = {p.489-499},
+year = {1991}
+}
+
+@article{Watt92,
+author = {A. Watt, M. Watt},
+title = {Advanced animation and
+rendering techniques},
+journaltitle = {Addison-Wesley},
+year = {1992}
+}
+
+@article{Zhao94,
+author = {J. Zhao, N. I. Badler},
+title = {Inverse Kinematics
+Positioning Using Nonlinear Programming for Highly
+Articulated Figures},
+journaltitle = {ACM Transactions on Graphics},
+vol = {13, No. 4},
+pages = {313-336},
+year = {1994}
+}
