--- a/Latex/ReportAG.tex
+++ b/Latex/ReportAG.tex
@@ -88,7 +88,7 @@ In this project we explore the application of inverse kinematics to the control 
 \section{Introduction}
 \begin{figure}
 \centering
-\includegraphics[scale=0.4]{chain3Dexample}
+\includegraphics[scale=0.4]{chain3Dexamplev2}
 \caption{Final three dimensional simulation with the trace and a star showing the goal position.}
 \label{fig:3Dpicture}
 \end{figure}
